fixed spacing on People component. Renamed About Me to People. Fixed fluxio label. Added zoom to stanley's diagram. removed projects from homepage. Fixed improperly padded prof pic for mitch.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -97,3 +97,8 @@ button:focus-visible {
   background-position: 0 0;
   background-attachment: fixed;
 }
+
+/* Hide Flourish credit */
+.flourish-credit {
+  display: none;
+}
